timeline dark mode fixes

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -149,7 +149,8 @@ $light: $gray-50 !default;
 $dark: $gray-800 !default;
 
 $bg-surface: var(--#{$prefix}white) !default;
-$bg-surface-secondary: var(--#{$prefix}light) !default;
+$bg-surface-secondary: var(--#{$prefix}gray-100) !default;
+$bg-surface-tertiary: var(--#{$prefix}gray-50) !default;
 $bg-surface-dark: var(--#{$prefix}dark) !default;
 
 $body-bg: $gray-100 !default;
@@ -190,7 +191,7 @@ $active-border-color: var(--#{$prefix}primary) !default;
 
 $hover-bg: rgba(var(--#{$prefix}muted-rgb), .04) !default;
 
-$disabled-bg: var(--#{$prefix}gray-100) !default;
+$disabled-bg: var(--#{$prefix}bg-surface-secondary) !default;
 $disabled-color: var(--#{$prefix}gray-300) !default;
 
 $link-color: var(--#{$prefix}primary) !default;
@@ -289,7 +290,7 @@ $icon-color: var(--#{$prefix}gray-500) !default;
 $code-color: var(--#{$prefix}gray-600) !default;
 $code-font-size: $small-font-size !default;
 $code-line-height: 1.25rem !default;
-$code-bg: var(--#{$prefix}gray-100) !default;
+$code-bg: var(--#{$prefix}bg-surface-secondary) !default;
 
 $pre-padding: 1rem !default;
 $pre-bg: var(--#{$prefix}bg-surface-dark) !default;
@@ -304,7 +305,7 @@ $kbd-border-radius: var(--#{$prefix}border-radius) !default;
 
 // Avatars
 $avatar-size: 2.5rem !default;
-$avatar-bg: var(--#{$prefix}gray-100) !default;
+$avatar-bg: var(--#{$prefix}bg-surface-secondary) !default;
 $avatar-sizes: (
   "xs": 1.5rem,
   "sm": 2rem,
@@ -506,7 +507,7 @@ $card-border-radius: var(--#{$prefix}border-radius) !default;
 $card-spacer-x: 1.5rem !default;
 $card-spacer-y: 1rem !default;
 
-$card-cap-bg: var(--#{$prefix}bg-surface-secondary) !default;
+$card-cap-bg: var(--#{$prefix}bg-surface-tertiary) !default;
 $card-cap-color: inherit !default;
 $card-cap-padding-x: $card-spacer-x !default;
 $card-cap-padding-y: $card-spacer-y !default;
@@ -520,7 +521,7 @@ $card-ribbon-margin: .25rem !default;
 $card-ribbon-border-radius: var(--#{$prefix}border-radius) !default;
 $card-ribbon-font-size: $h6-font-size !default;
 
-$card-header-tabs-bg: var(--#{$prefix}bg-surface-secondary) !default;
+$card-header-tabs-bg: var(--#{$prefix}bg-surface-tertiary) !default;
 
 $cards-grid-gap: 1rem !default;
 $cards-grid-breakpoint: lg !default;
@@ -627,7 +628,7 @@ $nav-tabs-border-radius: var(--#{$prefix}border-radius) !default;
 $nav-tabs-link-hover-border-color: $nav-tabs-border-color $nav-tabs-border-color $nav-tabs-border-color !default;
 $nav-tabs-link-active-border-color: $nav-tabs-link-hover-border-color !default;
 $nav-tabs-link-active-color: var(--#{$prefix}body-color) !default;
-$nav-tabs-bg: var(--#{$prefix}bg-surface-secondary) !default;
+$nav-tabs-bg: var(--#{$prefix}bg-surface-tertiary) !default;
 
 
 // Navbar
@@ -723,9 +724,9 @@ $table-th-border-color: var(--#{$prefix}border-color-translucent) !default;
 $table-th-padding-x: $table-cell-padding-x !default;
 $table-th-padding-y: .5rem !default;
 $table-th-color: var(--#{$prefix}muted) !default;
-$table-th-bg: var(--#{$prefix}gray-50) !default;
+$table-th-bg: var(--#{$prefix}bg-surface-tertiary) !default;
 $table-striped-order: even !default;
-$table-striped-bg: var(--#{$prefix}bg-surface-secondary) !default;
+$table-striped-bg: var(--#{$prefix}bg-surface-tertiary) !default;
 $table-group-separator-color: var(--#{$prefix}border-color-translucent) !default;
 
 $table-sort-bg-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' width='16' height='16' fill='none' stroke='currentColor' stroke-linecap='round' stroke-linejoin='round' stroke-width='1'><path d='M5 7l3 -3l3 3'/><path d='M5 10l3 3l3 -3'/></svg>") !default;
