--- a/src/scss/layout/_root.scss
+++ b/src/scss/layout/_root.scss
@@ -12,6 +12,7 @@
 
   --#{$prefix}bg-surface: #{$bg-surface};
   --#{$prefix}bg-surface-secondary: #{$bg-surface-secondary};
+  --#{$prefix}bg-surface-tertiary: #{$bg-surface-tertiary};
   --#{$prefix}bg-surface-dark: #{$bg-surface-dark};
   --#{$prefix}bg-forms: var(--#{$prefix}bg-surface);
 
